--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit
-xgboost
-pandas
-numpy
-joblib
-matplotlib
-seabor
+streamlit==1.47.1
+pandas==2.3.1
+numpy==2.3.2
+joblib==1.5.1
+matplotlib==3.10.5
+seaborn==0.13.2
 scikit-learn==1.6.1
